add schoolboard, house, congress to info window

--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
 
       var html = "<h3>" + "Voting Districts</h3>" +
         "Precinct: <b>" + precinct + "</b><br>" +
-        "Commission District: <b>" + commission + "</b><br>"; +
+        "Commission District: <b>" + commission + "</b><br>" +
         "School Board District: <b>" + schoolBoard + "</b><br>" +
         "House District: <b>" + house + "</b>" +
-        "Congressional District: <b>" + congressional + "</b>"
+        "Congressional District: <b>" + congressional + "</b>";
       console.log(html);
       $(".info").html(html);
       $(".info").show();
