fix break in info window

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         "Precinct: <b>" + precinct + "</b><br>" +
         "Commission District: <b>" + commission + "</b><br>" +
         "School Board District: <b>" + schoolBoard + "</b><br>" +
-        "House District: <b>" + house + "</b>" +
+        "House District: <b>" + house + "</b></br>" +
         "Congressional District: <b>" + congressional + "</b>";
       console.log(html);
       $(".info").html(html);
