add board of elections link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class='h-full scroll-auto relative'>
         <h1 class='txt-h2 mb6'>Athens-Clarke County Voting Districts</h1>
         <p>Find your districts for local and statewide elections. Enter your address into the search box on the left and your districts will be displayed for you.</p><br>
-        <p>Your Precinct number will determine your polling location. For the latest information on polling locations, candidates, and upcoming elections (including special elections), check out the ACC Board of Elections</p>
+        <p>Your Precinct number will determine your polling location. For the latest information on polling locations, candidates, and upcoming elections (including special elections), check out the <a class='link' href='https://www.athensclarkecounty.com/160/Board-of-Elections'>ACC Board of Elections</a></p>
         <div class='txt-s'>
           <hr class='txt-hr'>
           <div class='txt-h5'>ACC Board of Commissioners</div>
