edit text in sidebar

--- a/index.html
+++ b/index.html
@@ -36,26 +36,22 @@
         <div class='txt-s'>
           <hr class='txt-hr'>
           <div class='txt-h5'>ACC Board of Commissioners</div>
-          <p>The 10 Commissioners along with the Mayor have executive and legislative duties, including:
             <div class='txt-ul'>
-              <div class='txt-li'>enact and administer local ordinances</div>
-              <div class='txt-li'>approve budgets and oversee spending</div>
-              <div class='txt-li'>hire county employees</div>
+              <div class='txt-li'>10 members plus the mayor</div>
+              <div class='txt-li'>Enact and administer local ordinances</div>
+              <div class='txt-li'>Approve budgets and oversee spending</div>
+              <div class='txt-li'>Elected to a 4 year term</div>
+              <div class='txt-li'>Elections held every two years</div>
             </div>
-          <div class="prose">
-            <p>Elected to a 4 year term<br>
-              Elections held every two years</p>  </div>
             <br>
-            <div class='txt-h5'>Clarke County School Board</div>
-            The 9 School Board members serve as the education watchdogs for the county by:
+          <div class='txt-h5'>Clarke County School Board</div>
             <div class='txt-ul'>
-              <div class='txt-li'>making decisions about school programs</div>
-              <div class='txt-li'>incorporating their community’s view of what students should know and be able to do></div>
-              <div class='txt-li'>ensuring students get the best education for the tax dollars spent</div>
+            <div class='txt-li'>9 members serve as the education watchdogs for the county</div>
+              <div class='txt-li'>Make decisions about school programs</div>
+              <div class='txt-li'>Ensure students get the best education for the tax dollars spent</div>
+              <div class='txt-li'>Elected to a four year term</div>
+              <div class='txt-li'>Elections held every two years</div>
             </div>
-            <div class="prose">
-            <p>Elected to a four year term<br>
-            Elections held every two years</p> </div>
             <br>
             <div class='txt-h5'>Georgia General Assembly</div>
             <div class='txt-ul'>
@@ -64,11 +60,11 @@
               <div class='txt-li'>Both State Representatives and State Senators are elected to 2 year terms</div>
             </div>
             <br>
-            <div class='txt-h5'>US House of Representatives</div>
+            <!-- <div class='txt-h5'>US House of Representatives</div>
             <div class="prose">
               <p>Georgia has 14 members of the U.S. House of Representatives<br>
               Elected to a 2 year term</p>
-            </div>
+            </div> -->
               <!-- <br>
               <div class='txt-h5'>US Senate</div>
               <div class='txt-ul'>
