add author link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <ul>
             <li>See the original <a class='link' href='http://athensclarkecounty.com/248/Current-District-Maps'>maps</a></li>
             <li>Explore the original <a class='link' href='http://www.legis.ga.gov/Joint/reapportionment/en-US/default.aspx'>data</a></li>
-            <li>Map authored by <a class='link' href='#'>M. Duever</a></li>
+            <li>Map authored by <a class='link' href='https://mjduever.github.io/'>M. Duever</a></li>
             </p>
         </footer>
       </div>
