--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
           maxZoom: 16,
           minZoom: 11
         }).addTo(map);
+
         // add geocoder
         var options = {
           bounds: true,
@@ -128,8 +129,9 @@
           $.getJSON('data/commission.json'),
           $.getJSON('data/congress.json'),
           $.getJSON('data/house.json'),
+          $.getJSON('data/senate.json'),
           $.getJSON('data/schoolboard.json')
-        ).done(function(precincts, commission, congress, house, schoolboard) {
+        ).done(function(precincts, commission, congress, house, senate, schoolboard) {
           // can access data like this:
 
           var congressLayer = L.geoJson(congress[0], {
@@ -174,8 +176,35 @@
               });
             }
           });
-          // add User interaction with mouseover, mouseout
+
+        // add User interaction with mouseover, mouseout
           houseLayer.eachLayer(function(layer) {
+            layer.on('mouseover', function(e) {
+              e.target.setStyle({ //changes layer color of selected
+                opacity: 0.3
+              }).bringToFront();
+            }).on("mouseout", function(e) {
+              e.target.setStyle({ // returns to original layer color
+                opacity: 1.0
+              });
+            })
+          });
+          var senateLayer = L.geoJson(senate[0], {
+            style: function(feature) {
+              switch (feature.properties.DISTRICT) {
+                case '046': return{color: "#8da0cb"};
+                case '047': return{color: "#66c2a5"};
+              }
+            },
+            onEachFeature: function(feature, layer) {
+              var tooltipInfo = "Senate District: <b>" + feature.properties.DISTRICT + "</b>"
+              layer.bindTooltip(tooltipInfo, {
+                sticky: true
+              });
+            }
+          });
+          // add User interaction with mouseover, mouseout
+          senateLayer.eachLayer(function(layer) {
             layer.on('mouseover', function(e) {
               e.target.setStyle({ //changes layer color of selected
                 opacity: 0.3
@@ -312,6 +341,7 @@
             "Commission Districts": commissionLayer,
             "School Board Districts": schoolboardLayer,
             "State House Districts": houseLayer,
+            "State Senate Districts": senateLayer,
             "Congressional Districts": congressLayer
           };
           var layersControl = new L.Control.Layers(baseMaps, null, {
@@ -324,7 +354,7 @@
             // store lat long of result
             var latlng = [result.latlng.lng, result.latlng.lat];
 
-            var precinct, commission, schoolBoard, house, congressional;
+            var precinct, commission, schoolBoard, house, senate, congressional;
 
             // create a geojson feature point
             var point = turf.point(latlng);
@@ -384,6 +414,19 @@
               }
             })
             // loop through layers of featuregroup
+            senateLayer.eachLayer(function(layer) {
+
+              // convert Leaflet layer to geojson
+              var poly = layer.toGeoJSON();
+
+              // if the point is inside the polygon
+              if (turf.inside(point, poly)) {
+
+                // we have access to the polygon here
+                senate = poly.properties.DISTRICT;
+              }
+            })
+            // loop through layers of featuregroup
             congressLayer.eachLayer(function(layer) {
 
               // convert Leaflet layer to geojson
@@ -396,7 +439,7 @@
                 congressional = poly.properties.DISTRICT;
               }
             })
-            updateInfo(precinct, commission, schoolBoard, house, congressional)
+            updateInfo(precinct, commission, schoolBoard, house, senate, congressional)
 
           }); // end geocoder callback
 
@@ -415,15 +458,16 @@
         } //end drawinfo
 
         // update info pane about districts on mouse click
-        function updateInfo(precinct, commission, schoolBoard, house, congressional) {
+        function updateInfo(precinct, commission, schoolBoard, house, senate, congressional) {
 
-          console.log(precinct, commission, schoolBoard, house, congressional)
+          console.log(precinct, commission, schoolBoard, house, senate, congressional)
 
           var html = "<h3>" + "<b>This address is in:</b></h3>" +
             "Precinct: <b>" + precinct + "</b><br>" +
             "Commission District: <b>" + commission + "</b><br>" +
             "School Board District: <b>" + schoolBoard + "</b><br>" +
-            "House District: <b>" + house + "</b></br>" +
+            "House District: <b>" + house + "</b><br>" +
+            "State Senate District: <b>" + senate + "</b><br>" +
             "Congressional District: <b>" + congressional + "</b>";
           console.log(html);
           $(".info").html(html);
