change font size in info window, refine precinct color

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     .info h3 {
       margin: 0;
+      font-size: 1.2em;
     }
   </style>
 
@@ -291,7 +292,7 @@
               switch (feature.properties.PRECINCT_I) {
                 case '1A': return{color: "#b2e2e2"};
                 case '1B': return{color: "#66c2a4"};
-                case '1C': return{color: "#238b45"};
+                case '1C': return{color: "#2ca25f"};
                 case '1D': return{color: "#006d2c"};
                 case '2A': return{color: "#8c96c6"};
                 case '2B': return{color: "#8856a7"};
