fix spelling error, word omission

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               }
             },
             onEachFeature: function(feature, layer) {
-              var tooltipInfo = "Precint: <b>" + feature.properties.PRECINCT_I + "</b>"
+              var tooltipInfo = "Precinct: <b>" + feature.properties.PRECINCT_I + "</b>"
               layer.bindTooltip(tooltipInfo, {
                 sticky: true
               });
@@ -467,7 +467,7 @@
             "Precinct: <b>" + precinct + "</b><br>" +
             "Commission District: <b>" + commission + "</b><br>" +
             "School Board District: <b>" + schoolBoard + "</b><br>" +
-            "House District: <b>" + house + "</b><br>" +
+            "State House District: <b>" + house + "</b><br>" +
             "State Senate District: <b>" + senate + "</b><br>" +
             "Congressional District: <b>" + congressional + "</b>";
           console.log(html);
