add and remove fill opacity
because when the fill capacity is increased on mouseover, you can't see
the streets underneath, takes away from the exploration

--- a/index.html
+++ b/index.html
@@ -153,10 +153,12 @@
           congressLayer.eachLayer(function(layer) {
             layer.on('mouseover', function(e) {
               e.target.setStyle({ //changes layer color of selected
+                // fillOpacity: 1.0,
                 opacity: 0.3
               }).bringToFront();
             }).on("mouseout", function(e) {
               e.target.setStyle({ // returns to original layer color
+                // fillOpacity: 0.3,
                 opacity: 1.0
               });
             })
@@ -182,10 +184,12 @@
           houseLayer.eachLayer(function(layer) {
             layer.on('mouseover', function(e) {
               e.target.setStyle({ //changes layer color of selected
+                // fillOpacity: 1.0,
                 opacity: 0.3
               }).bringToFront();
             }).on("mouseout", function(e) {
               e.target.setStyle({ // returns to original layer color
+                // fillOpacity: 0.3,
                 opacity: 1.0
               });
             })
@@ -208,10 +212,12 @@
           senateLayer.eachLayer(function(layer) {
             layer.on('mouseover', function(e) {
               e.target.setStyle({ //changes layer color of selected
+                // fillOpacity: 1.0,
                 opacity: 0.3
               }).bringToFront();
             }).on("mouseout", function(e) {
               e.target.setStyle({ // returns to original layer color
+                // fillOpacity: 0.3,
                 opacity: 1.0
               });
             })
@@ -242,10 +248,12 @@
           schoolboardLayer.eachLayer(function(layer) {
             layer.on('mouseover', function(e) {
               e.target.setStyle({ //changes layer color of selected
+                // fillOpacity: 1.0,
                 opacity: 0.3
               }).bringToFront();
             }).on("mouseout", function(e) {
               e.target.setStyle({ // returns to original layer color
+                // fillOpacity: 0.3,
                 opacity: 1.0
               });
             })
@@ -278,10 +286,12 @@
           commissionLayer.eachLayer(function(layer) {
             layer.on('mouseover', function(e) {
               e.target.setStyle({ //changes layer color of selected
+                // fillOpacity: 1.0,
                 opacity: 0.3
               }).bringToFront();
             }).on("mouseout", function(e) {
               e.target.setStyle({ // returns to original layer color
+                // fillOpacity: 0.3,
                 opacity: 1.0
               });
             })
@@ -327,10 +337,12 @@
           precinctLayer.eachLayer(function(layer) {
             layer.on('mouseover', function(e) {
               e.target.setStyle({ //changes layer color of selected
+                // fillOpacity: 1.0,
                 opacity: 0.3
               }).bringToFront();
             }).on("mouseout", function(e) {
               e.target.setStyle({ // returns to original layer color
+                // fillOpacity: 0.3,
                 opacity: 1.0
               });
             })
