address to location

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             "State Senate District: <b>" + senate + "</b><br>" +
             "Congressional District: <b>" + congressional + "</b><br>" +
             "Polling Place: <b>"+ pollPlace + "</b><br>" +
-            "Address: <b>" + pollAddress + "</b>";
+            "Location: <b>" + pollAddress + "</b>";
           console.log(html);
           $(".info").html(html);
           $(".info").show();
