--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
       <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
       <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
-      <script src="http://rawgit.com/opencagedata/leaflet-opencage-search/master/dist/js/L.Control.OpenCageSearch.dev.js"></script>
-      
+      <script src="https://rawgit.com/opencagedata/leaflet-opencage-search/master/dist/js/L.Control.OpenCageSearch.dev.js"></script>
+
       <script async defer src='https://api.mapbox.com/mapbox-assembly/v0.17.0/assembly.js'></script>
       <script src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
 
