--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <footer class='mt12 bg-gray-faint txt-s relative w-full bottom px12'>
           <ul>
             <li>See the original <a class='link' href='http://athensclarkecounty.com/248/Current-District-Maps'>maps</a></li>
-            <li>Explore the original <a class='link' href='http://www.legis.ga.gov/Joint/reapportionment/en-US/default.aspx'>data</a></li>
+            <li>Explore the original <a class='link' href='https://www.legis.ga.gov/Joint/reapportionment/en-US/default.aspx'>data</a></li>
             <li>Map authored by <a class='link' href='https://mjduever.github.io/'>M. Duever</a></li>
             </p>
         </footer>
