--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
           map.addControl(layersControl);
 
           // listen for
-          geocoder.geocode('select', function(result) {
+          geocoder.on('select', function(result) {
             // store lat long of result
             var latlng = [result.latlng.lng, result.latlng.lat];
 
